# Universal-Privacy-Layer

./: .gitattributes  .gitignore  Dockerfile  PLAN.md  PROJECT_CONTEXT.md  README.md  backend_test.py  backend_test_results.json  design_guidelines.json  netlify.toml  render.yaml  vercel.json
.emergent/: emergent.yml  summary.txt
backend/: README.md  requirements.txt  server.py  zk_merkle.py  zk_stealth.py
circuits/: README.md  build_circuits.sh  package.json
contracts/: .env.example  .gitignore  Groth16Verifier.sol  PrivacyRelayer.sol  README.md  StealthAddressRegistry.sol  UPLVerifier.sol  UniswapPrivacyWrapper.sol  deploy.py  deploy_base_mainnet.py  deploy_bnb_avax.py  deploy_hyperliquid.py  deploy_optimism.py  deploy_verifier.py  deployed_avalanche.json  deployed_base.json  deployed_base.json.example  deployed_bnb.json  deployed_hyperliquid.json  deployed_optimism.json  foundry.toml  package-lock.json  verifier_addresses.json
contracts/solana/privacy_layer/: Cargo.toml
contracts/solana/privacy_layer/src/: lib.rs
docs/: SOLANA_DEPLOYMENT_GUIDE.md  SUI_DEPLOYMENT_GUIDE.md  ZKP_IMPLEMENTATION_GUIDE.md  base-pilot-closer.md  bundle-optimization-summary.md  confidential-amount-plan.md  customer-demo-flow.md  customer-demo.md  poseidon-t3-invariants.md  secp256k1-stealth-zk.md  zk-architecture.md  zk-toolchain.md
frontend/: .env  .gitignore  README.md  bundle-report.html  config-overrides.js  craco.config.js  package.json  webpack.zk.config.js
infra/: README.md  az-role.sh  azure-provision.bat  azure-provision.sh  migrate-data.md  verify-counts.sh
memory/: PRD.md  test_credentials.md
mobile/: App.tsx  README.md  app.json  package.json
mobile-expo/: App.js  README.md  app.json  package.json
scripts/: _adddenoms_wsl.py  add_denominations.sh  balance_check.sh  (+45 more)
sdk/python/: pyproject.toml
sdk/python/src/upl_sdk/: __init__.py  client.py
(+268 files in other folders)
