[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "upl-sdk"
version = "1.0.0"
description = "Universal Privacy Layer SDK - Private transactions across 7 EVM chains"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "UPL Protocol", email = "dev@privacycloak.in"}
]
keywords = ["privacy", "blockchain", "ethereum", "stealth-address", "zkp", "cross-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "web3>=6.0.0",
    "eth-account>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://privacycloak.in"
Documentation = "https://docs.privacycloak.in"
Repository = "https://github.com/upl-protocol/sdk-python"

[tool.setuptools.packages.find]
where = ["src"]
