[package]
name = "privacy_layer"
version = "0.1.0"
description = "Universal Privacy Layer - Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_layer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
anchor-client = "0.30.1"
